methods.picture.MethodsPicture.scala.code
def marquer (c:color) = {setCouleurBrosse(c);baisseBrosse();leveBrosse()}
def faireV () {
  marquer()
  gauche();avance();droite();avance()
  marquer()
  avance();droite();avance()
  marquer()
}

def pattern () {avance();faireV(Color.YELLOW);droite();droite();avance();faireV(Color.RED);droite();droite();avance();faireV(Color.BLUE);droite();droite();avance();faireV(Color.GREEN)}

override def run() {
}

